Actions
Bug #7876
closedlibast: misleading-indentation errors
Start date:
2017-02-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
../common/misc/magic.c: In function 'cklang': ../common/misc/magic.c:1127:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (s > mp->fbuf) ^~ ../common/misc/magic.c:1148:8: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' if (!mp->idtab) ^~ cc1: all warnings being treated as errors ../common/sfio/sfpool.c: In function 'sfpool': ../common/sfio/sfpool.c:291:4: error: this 'if' clause does not guard... [-Werror=misleading-indentation] { if(f) ^~ ../common/sfio/sfpool.c:293:3: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' if(pf) ^~ cc1: all warnings being treated as errors ../common/vmalloc/vmbest.c:983:6: error: this 'if' clause does not guard... [-Werror=misleading-indentation] { if(!bestreclaim(vd,np,C_INDEX(s)) ) ^~ ../common/vmalloc/vmbest.c:985:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' s = SIZE(np); /**/ASSERT(s%ALIGN == 0); ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 7bdb5b9a077c9ce26caedc489a6a5ee9e45214ed
commit 7bdb5b9a077c9ce26caedc489a6a5ee9e45214ed Author: Toomas Soome <tsoome@me.com> Date: 2017-06-19T17:08:12.000Z 7876 libast: misleading-indentation errors Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions