7876 libast: misleading-indentation errors Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Approved by: Richard Lowe <richlowe@richlowe.net>